--- a/package.json
+++ b/package.json
@@ -1,10 +1,28 @@
 {
-  "name": "LibMeta",
+  "name": "libmeta",
   "version": "0.0.1",
+  "scripts": {
+    "build": "npm run clean && webpack",
+    "build:dev": "npm run clean && webpack --watch",
+    "clean": "rimraf dist",
+    "webpack": "webpack"
+  },
   "dependencies": {
+    "jquery": "^3.3.1",
+    "uikit": "^3.0.0-rc.6"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.7.0",
+    "css-loader": "^0.28.11",
+    "mini-css-extract-plugin": "^0.4.0",
+    "node-sass": "^4.9.0",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.0.3",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "uikit": "^3.0.0-rc.6"
+    "style-loader": "^0.21.0",
+    "uglifyjs-webpack-plugin": "^1.2.6",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.8"
   }
 }
